<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment">

    <ImageView
        android:id="@+id/image_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"
        android:src="@drawable/login_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_auth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        android:text="@string/abiyasa"
        android:textStyle="bold"
        android:textSize="48sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="698dp"
        android:layout_below="@+id/tv_app_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_15">

        <TextView
            android:id="@+id/tv_description_auth"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="57dp"
            android:text="@string/description_auth"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="130dp"
            android:text="@string/join_now"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.261" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/custom_button_box"
            android:elevation="12dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/custom_button_box"
            android:backgroundTint="@color/white"
            android:elevation="12dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</RelativeLayout>